--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "install:all": "npm install && cd webviews && npm install",
     "vscode:prepublish": "npm run package",
     "compile": "npm run check-types && npm run lint && node esbuild.js",
-    "watch": "npm-run-all -p watch:*",
+    "watch": "concurrently 'npm:watch:*'",
     "watch:esbuild": "node esbuild.js --watch",
     "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
     "watch:webviews": "cd webviews && npm run watch",
@@ -72,9 +72,9 @@
     "@typescript-eslint/parser": "^7.11.0",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.0",
+    "concurrently": "^9.1.0",
     "esbuild": "^0.24.0",
     "eslint": "^8.57.1",
-    "npm-run-all": "^4.1.5",
     "typescript": "^5.6.3"
   },
   "dependencies": {
